Fixed layout alignment issue with left panel banner. Now it stays aligned when page size adjusts.

--- a/style.css
+++ b/style.css
@@ -1,22 +1,19 @@
-/* * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-} */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
 	margin: 0;
 	padding: 0;
+	height: 100vh;
 	display: flex;
 	flex-direction: row;
 	justify-content: stretch;
-	font-size: 16px;
+	font-size: 1em;
 	line-height: 1.3em;
 	font-family: 'Montserrat', sans-serif;}
 
 .left-side {
 	width: 40vw;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -26,76 +23,92 @@ body {
 	background-color: rgb(101, 115, 174);
 }
 
+.left-top {
+	height: 35vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: stretch;
+}
+
 .logo-banner {
+	height: 1.7em;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-
-	height: 15vh;
-	margin-top: 20vh;
-	font-size: 5em;
+	font-size: 6em;
 	font-weight: 800;
 	color: white;
 }
 
+.logo-text p {
+	margin: 0;
+}
+
 .logo-image {
-	max-height: 90%;
-	color: white;
+height: 2em;	
+color: white;
 }
 
 .logo-banner, 
 .logo-credit {
-	background-color:  rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 .logo-credit {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	font-size: 12px;
+	font-size: .7em;
 	color: white;
 }
 
 .right-side {
-	width: 60vw;
-	height: 100vh;
+	width: 60%;
+	height: 100%;
 	background-color: rgba(127, 161, 186, 0.5);
 	display: flex;
 	flex-direction: column;
 	align-items: stretch; 
-	justify-content: flex-start;
+	justify-content: stretch;
 }
 
 .intro {
 	height: 35vh;
-	width: 100%;
+	/* width: 100%; */
 	max-width: 800px;
-	font-weight: 500;
-	font-size: 24px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	font-weight: 700;
+	font-size: 1.5em;
 	line-height: 1.2em;
+	padding-left: 2.5em;
 }
 
 .intro-text {
-	padding: 10vh 3em 0;
-	max-height: 20vh;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 }
 
 .form {
-	background-color: #ffffffc5;
+	background-color: #f3f9fc;
 	box-shadow: 3px 3px 3px 3px #00000030;
 	padding-bottom: 2em;
 	padding-left: 4em;
 }
 
 .form-intro {
-	font-size: 24px;
+	font-size: 1.7em;
+	color: rgb(50, 50, 50);
 	font-weight: 600;
 }
 
 .error_msg {
-	height: 12px;
-	font-size: 12px;
+	height:.7em;
+	font-size: .7em;
 	color: red;
 	margin: 0;
 }
@@ -113,25 +126,28 @@ body {
 }
 
 .form-row label {
-	font-size: 14px;
+	font-size: .9em;
+	font-weight: 800;
 }
 
 .form-field {
 	display: flex;
 	flex-direction: column;
-	padding: 0 2em;
+	padding: 0 4em;
 	padding-left: 0;
 }
 
-.foot-content {
-	padding: 2em 4em;
+.foot {
+	/* padding: 2em 4em 0; */
+	display: flex;
+	padding: 2em 4em 0;
 }
 
 button {
 	background-color: rgb(113, 171, 219);
 	color: white;
 	font-weight: 800;
-	font-size: 16px;
+	font-size: 1em;
 	border-radius: 8px;
 	border: none;
 	padding: 1em 3em;
@@ -141,10 +157,10 @@ button {
 button:hover {
 	background-color: rgb(113, 178, 219);
 }
+
 button:active {
 	transform: scale(.99);
 	box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-
 }
 
 label {
